infra/configs/base/egress/github/io/kubernetes-sigs.github.io.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: kubernetes-sigs.github.io
  namespace: egress-system
spec:
  exportTo: ["*"]
  hosts:
    - kubernetes-sigs.github.io
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
---
########### HTTPS traffic to kubernetes-sigs.github.io ###########
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: direct-to-encapsulated-https-kubernetes-sigs.github.io
  namespace: egress-system
spec:
  parentRefs:
    - kind: ServiceEntry
      group: networking.istio.io
      name: kubernetes-sigs.github.io
      port: 443
  hostnames:
    - kubernetes-sigs.github.io
  rules:
    - backendRefs:
        - kind: Hostname
          group: networking.istio.io
          name: kubernetes-sigs.github.io.encapsulated-https.egress-gateway.mesh.internal
          port: 443
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: encapsulated-https-kubernetes-sigs.github.io
  namespace: egress-system
spec:
  exportTo: ["."]
  hosts:
    - kubernetes-sigs.github.io.encapsulated-https.egress-gateway.mesh.internal
  location: MESH_INTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
      targetPort: 7890
  resolution: STATIC
  workloadSelector:
    labels:
      app: proxy-engine
---
# Encapsulate the egress traffic into CONNECT tunnel to forward all traffic to it.
# Applies to HTTPS traffic to kubernetes-sigs.github.io.
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: encapsulate-https-kubernetes-sigs.github.io
  namespace: egress-system
spec:
  host: kubernetes-sigs.github.io.encapsulated-https.egress-gateway.mesh.internal
  exportTo: ["."]
  trafficPolicy:
    tunnel:
      protocol: CONNECT
      targetHost: kubernetes-sigs.github.io
      targetPort: 443
